--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,13 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.15.2</version>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.12.0</version>
+		</dependency>
+				
 	</dependencies>
 
 	<build>
