--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,14 @@
 		    <version>1.1.1</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20160810</version>
+		</dependency>
+
+
 
 	</dependencies>
 	
