--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
 		    <artifactId>spring-security-taglibs</artifactId>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-messaging -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-messaging</artifactId>
+		</dependency>
 		
 		
 		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
